cree arreglos para jeans hombre y mujer, camisas hombre y mujer y cambie el logo principal por el de camkat

--- a/camkat.html
+++ b/camkat.html
@@ -23,26 +23,26 @@
         <img src="./icons/icon_menu.svg" alt="menu" class="menu">
 
         <div class="navbar-left">
-            <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
+            <img src="https://i.imgur.com/DYXnfzI.png" alt="logo" class="logo">
 
             <ul>
                 <li>
-                    <a href="/">All</a>
+                    <a href="/">Catálogo Completo</a>
                 </li>
                 <li>
-                    <a href="/">Clothes</a>
+                    <a href="/">CamisetasH</a>
                 </li>
                 <li>
-                    <a href="/">Electronics</a>
+                    <a href="/">JeansH</a>
                 </li>
                 <li>
-                    <a href="/">Furnitures</a>
+                    <a href="/">BlusasM</a>
                 </li>
                 <li>
-                    <a href="/">Toys</a>
+                    <a href="/">JeansM</a>
                 </li>
                 <li>
-                    <a href="/">Others</a>
+                    <a href="/">Otras prendas</a>
                 </li>
             </ul>
         </div>
@@ -188,6 +188,7 @@
     </aside>
 
     <section class="main-container">
+        <h1 class="tipoDeRopa">ropa</h1>
         <div class="cards-container">
             
            <!--   <div class="product-card">
