cree una  funcion por cada opcion del navegador para que le aparezca el tipo de ropa al cliente dea cuerdo al boton que clickee

--- a/camkat.html
+++ b/camkat.html
@@ -27,29 +27,29 @@
 
             <ul>
                 <li>
-                    <a href="/">Catálogo Completo</a>
+                    <a  class="opcionTodo">Catálogo Completo</a>
                 </li>
                 <li>
-                    <a href="/">CamisetasH</a>
+                    <a  class="opcionCamisetasH">CamisetasH</a>
                 </li>
                 <li>
-                    <a href="/">JeansH</a>
+                    <a  class="OpcionJeansH">JeansH</a>
                 </li>
                 <li>
-                    <a href="/">BlusasM</a>
+                    <a  class="opcionBlusasM">BlusasM</a>
                 </li>
                 <li>
-                    <a href="/">JeansM</a>
+                    <a  class="opcionJeansM">JeansM</a>
                 </li>
                 <li>
-                    <a href="/">Otras prendas</a>
+                    <a  class="opcionOtrasPrendas">Otras prendas</a>
                 </li>
             </ul>
         </div>
 
         <div class="navbar-right">
             <ul>
-                <li class="navbar-email">platzi@example.com</li>
+                <li class="navbar-email">camkatstore@gmail.com</li>
                 <li class="navbar-shopping-cart">
                     <img src="./icons/icon_shopping_cart.svg" alt="shopping cart">
                     <div>2</div>
