ya me permite cickear en el menu navegador y que me aparezca en el contenedor principal el tipo de presna corrspondiente, ahora debo hacer lo mismo desde el menu mobil

--- a/camkat.html
+++ b/camkat.html
@@ -36,7 +36,7 @@
                     <a  class="OpcionJeansH">JeansH</a>
                 </li>
                 <li>
-                    <a  class="opcionBlusasM">BlusasM</a>
+                    <a  class="opcionchaquetasM">Chaquetas</a>
                 </li>
                 <li>
                     <a  class="opcionJeansM">JeansM</a>
@@ -188,7 +188,7 @@
     </aside>
 
     <section class="main-container">
-        <h1 class="tipoDeRopa">ropa</h1>
+        <h1 class="tipoDeRopa">𝐁𝐎𝐃𝐄𝐆𝐀 𝐃𝐄 𝐑𝐎𝐏𝐀👖🥼👕👚👙🧥🧦</h1>
         <div class="cards-container">
             
            <!--   <div class="product-card">
