ya funcionan las 5 primeras categorias del menu movil tambien, ya me muestran los productos tal cual seleccionas el tipo o categoria

--- a/camkat.html
+++ b/camkat.html
@@ -27,26 +27,26 @@
 
             <ul>
                 <li>
-                    <a  class="opcionTodo">Catálogo Completo</a>
+                    <a  class="opcionTodoDesktop">Catálogo Completo</a>
                 </li>
                 <li>
-                    <a  class="opcionCamisetasH">CamisetasH</a>
+                    <a  class="opcionCamisetasHDesktop">CamisetasH</a>
                 </li>
                 <li>
-                    <a  class="OpcionJeansH">JeansH</a>
+                    <a  class="OpcionJeansHDesktop">JeansH</a>
                 </li>
                 <li>
-                    <a  class="opcionchaquetasM">Chaquetas</a>
+                    <a  class="opcionchaquetasMDesktop">Chaquetas</a>
                 </li>
                 <li>
-                    <a  class="opcionJeansM">JeansM</a>
+                    <a  class="opcionJeansMDesktop">JeansM</a>
                 </li>
                 <li>
-                    <a  class="opcionOtrasPrendas">Otras prendas</a>
+                    <a  class="opcionOtrasPrendasDesktop">Otras prendas</a>
                 </li>
             </ul>
         </div>
-
+                                             
         <div class="navbar-right">
             <ul>
                 <li class="navbar-email">camkatstore@gmail.com</li>
@@ -76,25 +76,25 @@
         <div class="mobile-menu inactive">
     <ul>
         <li>
-            <a href="/">CATEGORIES</a>
+            <h1 >CATEGORIES</h1>
         </li>
         <li>
-            <a href="/">All</a>
+            <a class="opcionTodoMobil">Catálogo Completo</a>
         </li>
         <li>
-            <a href="/">Clothes</a>
+            <a class="opcionCamisetasHMobil">CamisetasH</a>
         </li>
         <li>
-            <a href="/">Electronics</a>
+            <a class="OpcionJeansHMobil">JeansH</a>
         </li>
         <li>
-            <a href="/">Furnitures</a>
+            <a class="opcionchaquetasMMobil">Chaquetas</a>
         </li>
         <li>
-            <a href="/">Toys</a>
+            <a class="opcionJeansMMobil">JeansM</a>
         </li>
         <li>
-            <a href="/">Other</a>
+            <a class="opcionOtrasPrendasMobil">Otras prendas</a>
         </li>
     </ul>
 
