--- a/camkat.html
+++ b/camkat.html
@@ -109,7 +109,7 @@
 
     <ul>
         <li>
-            <a href="/" class="email">platzi@example.com</a>
+            <a class="emailMobil">platzi@example.com</a>
         </li>
         <li>
             <a href="/" class="sign-out">Sign out</a>
