ajustada la info de la empresa y se pone logo al cargar la pagina

--- a/camkat.html
+++ b/camkat.html
@@ -266,6 +266,9 @@
              <!-- comentamos todos estos elementos por que vaamos a crear todos los productos desdde java script -->
     
         </div>
+        <div class="divImagenLogocamkat">
+            <img class="imagenLogocamkat" src="https://i.imgur.com/sbELWKC.jpg" alt="loguito">
+        </div>
     </section>
 
    
