adicione link para mob, tab y desk

--- a/camkat.html
+++ b/camkat.html
@@ -11,7 +11,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./camkat.css">
+    <link rel="stylesheet" href="./camkatMob.css">
+    <link rel="stylesheet" href="./camkatTablet.css" media="screen and (min-width: 640px)">
+    <link rel="stylesheet" href="./camkatDesktop.css" media="screen and (min-width: 840px)">
+
 
     <title>DeTodo S.A.S</title>
 
