quite el scrollo horizontal de modo tablet, ahora voy a cambiar el correo por logo

--- a/camkat.html
+++ b/camkat.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./camkatMob.css">
+    <link rel="stylesheet" href="./camkatMob.css" media="screen and (max-width: 639px)"> 
     <link rel="stylesheet" href="./camkatTablet.css" media="screen and (min-width: 640px)">
     <link rel="stylesheet" href="./camkatDesktop.css" media="screen and (min-width: 840px)">
 
@@ -52,7 +52,7 @@
 
         <div class="navbar-right">
             <ul>
-                <li class="navbar-email">camkatstore@gmail.com</li>
+                <li class="navbar-email" id="logoDelCorreo">camkatstore@gmail.com</li>
                 <li class="navbar-shopping-cart">
                     <img src="./icons/icon_shopping_cart.svg" alt="shopping cart">
                     <div>2</div>
