responsive design terminado para movil, tablet y desktop

--- a/camkat.html
+++ b/camkat.html
@@ -327,7 +327,7 @@
                     <li>
                         <h4>Nosotros</h4>
                     </li>
-                    <li><a class="footerInicio">Inicio</a></li>
+                    <li><a href="#" class="footerInicio">Inicio</a></li>
                     <li><a class="footerAcercaDe">Acerca de</a></li>
                     <li><a href="https://bit.ly/WhatsAppBCAH" target="_blank" class="footerContacto">Contacto</a></li>
                 </ul>
