cambio de logo de menu movil y arreglo de nav left

--- a/camkat.html
+++ b/camkat.html
@@ -23,7 +23,7 @@
 
 <body>
     <nav>
-        <img src="./icons/icon_menu.svg" alt="menu" class="menu">
+        <img src="https://cdn-icons-png.flaticon.com/512/4378/4378745.png" alt="menu" class="menu">
 
         <div class="navbar-left">
             <img src="https://i.imgur.com/DYXnfzI.png" alt="logo" class="logo">
