cambio de logo de carrito de compras

--- a/camkat.html
+++ b/camkat.html
@@ -54,7 +54,7 @@
             <ul>
                 <li class="navbar-email" id="logoDelCorreo">camkatstore@gmail.com</li>
                 <li class="navbar-shopping-cart">
-                    <img src="./icons/icon_shopping_cart.svg" alt="shopping cart">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTk_cQo5P_GuD0gkMjs4-fl071WUB2DfUhq3286Z-d_tHQz3-18yPECduP3S2rSd1lQhX8&usqp=CAU" alt="shopping cart">
                     
                     <div>2</div>
                 </li>
