--- a/camkat.html
+++ b/camkat.html
@@ -104,7 +104,7 @@
 
             <ul>
                 <li>
-                    <a href="/">My orders</a>
+                    <a class="ordersMenuMobil">My orders</a>
                 </li>
                 <li>
                     <a href="/">My account</a>
