--- a/camkat.html
+++ b/camkat.html
@@ -64,7 +64,7 @@
         <div class="desktop-menu inactive">
             <ul>
                 <li>
-                    <a href="/" class="title">My orders</a>
+                    <a class="titleTotalCompras">My orders</a>
                 </li>
 
                 <li>
