adicionado la opcion sign out de menu mobil. Hasta aqui quedan todas las opciones del menuMobil funcionando

--- a/camkat.html
+++ b/camkat.html
@@ -116,7 +116,7 @@
                     <a class="emailMobil">camkatstore@gmail.com</a>
                 </li>
                 <li>
-                    <a href="/" class="sign-out">Sign out</a>
+                    <a class="sign-outMenuMobil">Sign out</a>
                 </li>
             </ul>
         </div>
