adicionado cursor pointer a opcion menudesktop que sale del correo de menu movil

--- a/camkat.html
+++ b/camkat.html
@@ -72,7 +72,7 @@
                 </li>
 
                 <li>
-                    <a href="/">Sign out</a>
+                    <a class="sign-outMenuDesktop">Sign out</a>
                 </li>
             </ul>
         </div>
