--- a/camkat.html
+++ b/camkat.html
@@ -194,10 +194,10 @@
     
         <div class="order">
             <p>
-                <span>03.25.21</span>
-                <span>6 articles</span>
+                <span id="spanFechaCompraAdicionada">00.00.00</span>
+                <span id="spanTotalArticulosAdicionados" >0 articles</span>
             </p>
-            <p>$560.00</p>
+            <p id="spanTotalPrecioArticulos">$000.00</p>
         </div>
 
         <!-- <div class="my-order-content">
