modificaciones de desplegables, css y html

--- a/camkat.html
+++ b/camkat.html
@@ -30,7 +30,7 @@
 
             <ul>
                 <li>
-                    <a class="opcionTodoDesktop">Catálogo Completo</a>
+                    <a class="opcionTodoDesktop">All</a>
                 </li>
                 <li>
                     <a class="opcionCamisetasHDesktop">CamisetasH</a>
@@ -45,7 +45,7 @@
                     <a class="opcionJeansMDesktop">JeansM</a>
                 </li>
                 <li>
-                    <a class="opcionOtrasPrendasDesktop">Otras prendas</a>
+                    <a class="opcionOtrasPrendasDesktop">Otras</a>
                 </li>
             </ul>
         </div>
