adicionado el correo del usuario a las 3 querry del proyecto

--- a/camkat.html
+++ b/camkat.html
@@ -52,7 +52,7 @@
 
         <div class="navbar-right">
             <ul>
-                <li class="navbar-email" id="logoDelCorreo">camkatstore@gmail.com</li>
+                <li class="navbar-email" id="logoDelCorreo">Mi Cuenta</li>
                 <li class="navbar-shopping-cart">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTk_cQo5P_GuD0gkMjs4-fl071WUB2DfUhq3286Z-d_tHQz3-18yPECduP3S2rSd1lQhX8&usqp=CAU" alt="shopping cart">
                     
@@ -63,6 +63,9 @@
 
         <div class="desktop-menu inactive">
             <ul>
+                <li>
+                    <a class="correoDesktopMenu">Usuario: Inicia Sesión</a>
+                </li>
                 <li>
                     <a class="titleTotalCompras">My orders</a>
                 </li>
