me permite registrar usuarios e iniciar sesion y comparar si si estan en el arreglo, ahora se debe ejecutar para que se pueda trabajar con localStorage

--- a/camkat.html
+++ b/camkat.html
@@ -81,6 +81,16 @@
         </div>
 
         <div class="mobile-menu inactive">
+
+            <ul>
+                <li>
+                    <a class="emailMobil">Iniciar Sesión</a>
+                </li>
+                <li>
+                    <a class="sign-outMenuMobil inactive">Sign out</a>
+                </li>
+            </ul>
+            
             <ul>
                 <li>
                     <h1>CATEGORIES</h1>
@@ -105,21 +115,14 @@
                 </li>
             </ul>
 
-            <ul>
-                <li>
-                    <a class="emailMobil">Iniciar Sesión</a>
-                </li>
-                <li>
-                    <a class="sign-outMenuMobil">Sign out</a>
-                </li>
-            </ul>
             
+
             <ul>
                 <li>
-                    <a class="todasOrdersMenuMobil">My orders</a>
+                    <a class="todasOrdersMenuMobil inactive">My orders</a>
                 </li>
                 <li>
-                    <a class="miCuentaMenuMobil">My account</a>
+                    <a class="miCuentaMenuMobil inactive">My account</a>
                 </li>
             </ul>
 
