ya me permite ingresar correo y si no es valido, no me aparece en el menu movil. me valida si esta registrado, pero aun no hago storageLocal

--- a/camkat.html
+++ b/camkat.html
@@ -87,6 +87,9 @@
                     <a class="emailMobil">Iniciar Sesión</a>
                 </li>
                 <li>
+                    <a class="emailMobilSesionIniciada inactive"></a>
+                </li>
+                <li>
                     <a class="sign-outMenuMobil inactive">Sign out</a>
                 </li>
             </ul>
@@ -143,6 +146,8 @@
             
                         <label for="password" class="labelPasswordIngreso">Password</label>
                         <input type="password" id="password" placeholder="*********" class="inputIngreso input-passwordIngreso">
+
+                        <p class="pInfoErrroneaIngreso inactive">Email ó password erroneos</p>
             
                         <input type="submit" value="Log in" class="primary-buttonIngreso login-buttonIngreso">
                         <a href="/">Forgot my password</a>
