--- a/camkat.html
+++ b/camkat.html
@@ -67,6 +67,9 @@
                     <a class="correoDesktopMenu">Usuario: Inicia Sesión</a>
                 </li>
                 <li>
+                    <a class="emailDesktopSesionIniciada inactive"></a>
+                </li>
+                <li>
                     <a class="titleTotalCompras">My orders</a>
                 </li>
 
