le puse el inactive a los li quye contienen las opciones del menu desktop, pero en modo mobil no me quiere aplicar las estilos al correo nuevo que se crea

--- a/camkat.html
+++ b/camkat.html
@@ -63,22 +63,22 @@
 
         <div class="desktop-menu inactive">
             <ul>
-                <li>
+                <li class="liCorreoDesktopMenu">
                     <a class="correoDesktopMenu">Usuario: Inicia Sesión</a>
                 </li>
-                <li>
-                    <a class="emailDesktopSesionIniciada inactive"></a>
+                <li class="liEmailDesktopSesionIniciada inactive">
+                    <a class="emailDesktopSesionIniciada "></a>
                 </li>
-                <li>
-                    <a class="titleTotalCompras">My orders</a>
-                </li>
-
-                <li>
-                    <a class ="desktop-menu-cuenta">My account</a>
+                <li class="liTitleTotalCompras inactive">
+                    <a class="titleTotalCompras ">My orders</a>
                 </li>
 
-                <li>
-                    <a class="sign-outMenuDesktop">Sign out</a>
+                <li class="liDesktop-menu-cuenta inactive">
+                    <a class ="desktop-menu-cuenta ">My account</a>
+                </li>
+
+                <li class="liDign-outMenuDesktop inactive">
+                    <a class="sign-outMenuDesktop ">Sign out</a>
                 </li>
             </ul>
         </div>
