adicionado desplegable de mostrar cuenta . sirve para 3 tipos de tamaños distintos y funiona el inactive y el toogle adecuadamente. ademas, muestra la informacion correctamente

--- a/camkat.html
+++ b/camkat.html
@@ -232,6 +232,7 @@
         <div class="divMostrarCuenta inactive">
             <div class="loginMostrarCuenta">
                 <div class="form-containerMostrarCuenta">
+                    <img src="./camkatImages/cat.png" alt="logoDeIngreso" class="logoMostrarCuenta">
                     <h1 class="titleMostrarCuenta">My account</h1>
             
                     <form action="/" class="formMostrarCuenta">
