adicionado el desplegable ingresar cuenta cuando se escoge un producto y se quiere agreghar al carrito. Hay que ver como arreglar que el aside de detalle de cada producto y el toggle de ingresar cuenta se estan ejecutando mal(se arreglaron alturas de desplegable ingreso cuenta)

--- a/camkat.html
+++ b/camkat.html
@@ -142,6 +142,9 @@
                 <div class="form-containerIngreso">
 
                     <img src="./camkatImages/cat.png" alt="logoDeIngreso" class="logoIngreso">
+
+                    <h1 class="titleIngreso">Ingresa tu cuenta</h1>
+                    <p class="subtitleIngreso">Ingresa a tu cuenta para comenzar a comprar.</p>
             
                     <form action="/" class="formIngreso">
                         <label for="emailIngreso" class="labelEmailIngreso">Email address</label>
