no esta claro como hacer toggle de mostrar informacion

--- a/camkat.html
+++ b/camkat.html
@@ -583,6 +583,14 @@
         </div>
     </section>
 
+    <section class="mostrarInformacion inactive">
+
+        <div class="containerMiInformacion">
+    
+        </div>
+
+    </section>
+
     <footer class="footerCamkat">
 
         <div class="divMarcasRamdom">
