cambiado el tamaño de letra de mostrarInformacion

--- a/camkat.html
+++ b/camkat.html
@@ -128,7 +128,7 @@
                     <a class="todasOrdersMenuMobil inactive">My orders</a>
                 </li>
                 <li>
-                    <a class="miCuentaMenuMobil inactive">My account</a>
+                    <a class="miCuentaMenuMobil inactive">Mi Información</a>
                 </li>
             </ul>
 
