pusimos nombre y correo en aside de editarCuenta y deshabilitamos botones de ingresar y crear cuenta y borramos boton de olvido contrasenia, por que no se dejo deshabilitar

--- a/camkat.html
+++ b/camkat.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./camkatDesktop.css" media="screen and (min-width: 840px)">
 
 
-    <title>DeTodo S.A.S</title>
+    <title >Store👗🥼👖👢</title>
 
     <!-- el root nos sirve para personalizar 'propiedades' de  html desde la raiz, para luego usarlas en todo el documento-->
 </head>
@@ -159,8 +159,8 @@
 
                         <p class="pInfoErrroneaIngreso inactive">Email ó password erroneos</p>
             
-                        <input type="submit" value="Log in" class="primary-buttonIngreso login-buttonIngreso">
-                        <a class="olvidoContrasenia">Forgot my password</a>
+                        <input type="submit" value="Log in" id="usuarioIngresado"  class="primary-buttonIngreso login-buttonIngreso">
+                        <a class="olvidoContrasenia" id="contraseniaOlvidada">Forgot my password</a>
 
                     </form>
             
