div divMetodoDePago en proceso

--- a/camkat.html
+++ b/camkat.html
@@ -368,6 +368,10 @@
             </div>
         
         </div>
+
+        <div class="divMetodoDePago">
+
+        </div>
     </nav>
 
     <aside id="shoppingCartContainer" class="inactive">
