--- a/clase14.html
+++ b/clase14.html
@@ -31,6 +31,7 @@
             height: 100%;
             display: grid;
             place-items: center;
+            background-color: var(--hospital-green)
         }
 
         .divContenedorMetodoPago{
