Hecho el css de Nequi para version mobil

--- a/camkat.html
+++ b/camkat.html
@@ -390,7 +390,7 @@
                             <option value="opcion5">MasterCard</option>
                         </select>
 
-                        <div class="pagoNequi inactive">
+                        <div class="pagoNequi">
 
                             <form action="/" class="formPagoNequi">
 
@@ -427,7 +427,7 @@
                             </form>
                         </div>
 
-                        <div class="pagoDaviplata">
+                        <div class="pagoDaviplata inactive">
                         
                             <form action="/" class="formPagoDaviplata">
                         
