Hecho el HTML, CSS y modificaciones javaScript para el desplegable de metodo de pago, junto con los 4 desplegables de bancos y responsive design(movil, tablet y desktop)

--- a/camkat.html
+++ b/camkat.html
@@ -534,6 +534,10 @@
             
                     </div>
 
+                    <label for="mostrarTotalApagar" class="labelTotalPago">Total a Pagar:</label>
+                    <p class="pTotalApagarMetdoPago"> $ <span class="spanValorCompraMetodoPago">00.00</span>
+                    </p>
+
                     <button class="buttonPagoDefMetodoPago">Pagar</button>
             
                 </div>
