en desplegable de recuperar cuenta se adiciono el boton de buscar correo, si lo encuewntra en base de datos, imprime mensaje de que se le envio un correo, si no le imprime que correo es erroneo

--- a/camkat.html
+++ b/camkat.html
@@ -340,6 +340,8 @@
                         <label for="cell-o-correo" class="labelCell-o-correoRecover">Correo o Celular</label>
                         <input type="password" id="cell-o-correo" placeholder="camkat@gmail ó 321575389"
                             class="inputCell-o-correoRecover input-Cell-o-correoRecover">
+
+                            <p class="correoIncorrectoRecover inactive">Correo no registrado</p>
             
                         <input type="submit" value="Buscar"
                             class="primary-buttonRecover login-buttonCell-o-correoRecover">
