primer avance sencillo: pusimos boton cerrar a ventana inicioSesion

--- a/camkat.html
+++ b/camkat.html
@@ -143,6 +143,10 @@
 
                     <img src="./camkatImages/cat.png" alt="logoDeIngreso" class="logoIngreso">
 
+                    <div class="divCerrarIngreso">
+                        <img src="./icons/icon_close.png" alt="cerrar" class="logoCerrarIngreso">
+                    </div>
+                    
                     <h1 class="titleIngreso">Ingresa tu cuenta</h1>
                     <p class="subtitleIngreso">Ingresa a tu cuenta para comenzar a comprar.</p>
             
